WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188069
[Curl] Set correct source info to ResourceResponse.
https://bugs.webkit.org/show_bug.cgi?id=188069
Summary
[Curl] Set correct source info to ResourceResponse.
Basuke Suzuki
Reported
2018-07-26 12:13:02 PDT
ResourceResponseBase::Source::Network must be set by each ports.
Attachments
PATCH
(2.81 KB, patch)
2018-07-26 20:43 PDT
,
Basuke Suzuki
fujii.hironori
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews200 for win-future
(12.91 MB, application/zip)
2018-07-27 04:26 PDT
,
EWS Watchlist
no flags
Details
PATCH
(2.68 KB, patch)
2018-07-27 09:11 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2018-07-26 20:43:07 PDT
Created
attachment 345899
[details]
PATCH
Fujii Hironori
Comment 2
2018-07-26 21:18:06 PDT
https://trac.webkit.org/changeset/234277/
In the above unreviewd gardening commit, you enabled just only http/tests/cache/disk-cache/disk-cache-302-status-code.html just before this patch. This isn't what I asked you to do. I want you to enable test cases of http as much as possible. That doesn't mean you should make all tests pass. It just mean marking failed tests as Failure, Crash or Timeout. Can you enable all tests under http/tests/cache/disk-cache? If not, why? And, if you can't enable all tests under http/tests/cache/disk-cache. I don't like the idea enable just only http/tests/cache/disk-cache/disk-cache-302-status-code.html because we can't check regressions by landing your patch.
Basuke Suzuki
Comment 3
2018-07-26 21:35:04 PDT
(In reply to Fujii Hironori from
comment #2
)
>
https://trac.webkit.org/changeset/234277/
> > In the above unreviewd gardening commit, you enabled just only > http/tests/cache/disk-cache/disk-cache-302-status-code.html just > before this patch. > > This isn't what I asked you to do. I want you to enable test > cases of http as much as possible. That doesn't mean you should > make all tests pass. It just mean marking failed tests as Failure, > Crash or Timeout. > > Can you enable all tests under http/tests/cache/disk-cache? > If not, why? > And, if you can't enable all tests under http/tests/cache/disk-cache. > I don't like the idea enable just only > http/tests/cache/disk-cache/disk-cache-302-status-code.html because we can't > check regressions by landing your patch.
As I said here
https://bugs.webkit.org/show_bug.cgi?id=188033
, it is unpractical to maintain the area currently we are not focusing. There are so many errors occur to http test right now. The test set is glowing every day and every time new test added to those area, we have to maintain those. We are new comer and not ready for entire test yet. We are looking for the bug which makes the number of those errors (failure/crash/timeout) drastically small and fixing them one by one. The one for DumpRenderTree crashing is the one of the case. Still in such situation, if the fix make the test passing, that should be explicitly noted. That becomes the logging of the regression. I don't think that is meaningless. I don't understand why you say:
> we can't check regressions by landing your patch.
like that. BTW, we cannot enable disk-cache for DRT because disk-cache itself is disabled.
https://bugs.webkit.org/show_bug.cgi?id=173361
The test I chose is not related directly with disk-cache, but that uses internal.source interface which is related to this patch.
Fujii Hironori
Comment 4
2018-07-26 22:12:39 PDT
I know it's hard to keep test bots green. That's the reason all test bots other than Mac port are red all the time. It's not problem WinCairo test bots will be red. It's important that we can notice regressions by checking the number of test failures. There are two reasons I think it's important to enable http tests for WinCairo port: 1. Curl part is used only by WinCairo port. Other part, for example Cairo part, are tested in other ports. 2. You are actively developing Curl part.
Basuke Suzuki
Comment 5
2018-07-26 22:58:54 PDT
(In reply to Fujii Hironori from
comment #4
)
> I know it's hard to keep test bots green. That's the reason all > test bots other than Mac port are red all the time. It's not > problem WinCairo test bots will be red. It's important that we > can notice regressions by checking the number of test failures. > > There are two reasons I think it's important to enable http tests > for WinCairo port: > > 1. Curl part is used only by WinCairo port. Other part, for example Cairo > part, are tested in other ports. > 2. You are actively developing Curl part.
I understand test is very important. I understand other ports doing such hard maintenance duty every day. We, WinCairo port, want to follow them. That's why we work hard to send these patches. I'm just saying this is too early to make http tests at this moment because we are still development phase of test environment. We want to maintain the minimum set of tests which can test each feature of TestRunner without trouble. So how about this? Enabling http/tests. Then disabling sub directories. Does this make sense for you?
Fujii Hironori
Comment 6
2018-07-27 03:48:02 PDT
(In reply to Basuke Suzuki from
comment #5
)
> So how about this? Enabling http/tests. Then disabling sub directories. Does > this make sense for you?
Sounds good. I did it <
https://trac.webkit.org/r234309
>, and enable small portion of http tests. I hope this doesn't cause any trouble for you.
EWS Watchlist
Comment 7
2018-07-27 04:26:10 PDT
Comment on
attachment 345899
[details]
PATCH
Attachment 345899
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8671528
New failing tests: http/tests/security/canvas-remote-read-remote-video-hls.html
EWS Watchlist
Comment 8
2018-07-27 04:26:21 PDT
Created
attachment 345911
[details]
Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
WebKit Commit Bot
Comment 9
2018-07-27 07:16:41 PDT
Comment on
attachment 345899
[details]
PATCH Rejecting
attachment 345899
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'apply-attachment', '--no-update', '--non-interactive', 345899, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=345899&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=188069
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Processing patch 345899 from
bug 188069
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=345899
Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Fujii Hironori']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 4 diffs from patch file(s). patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/platform/wincairo/TestExpectations Hunk #1 FAILED at 863. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/wincairo/TestExpectations.rej patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/platform/network/curl/ResourceResponseCurl.cpp Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Fujii Hironori']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
https://webkit-queues.webkit.org/results/8672419
Basuke Suzuki
Comment 10
2018-07-27 09:11:40 PDT
Created
attachment 345916
[details]
PATCH Fujii-san, thanks for r+
WebKit Commit Bot
Comment 11
2018-07-27 09:50:26 PDT
Comment on
attachment 345916
[details]
PATCH Clearing flags on attachment: 345916 Committed
r234311
: <
https://trac.webkit.org/changeset/234311
>
WebKit Commit Bot
Comment 12
2018-07-27 09:50:27 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 13
2018-07-27 09:52:16 PDT
<
rdar://problem/42664177
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug