[Curl] Set correct source info to ResourceResponse. https://bugs.webkit.org/show_bug.cgi?id=188069

Reviewed by Fujii Hironori.

Source/WebCore:

ResourceResponseBase::Source::Network must be set by each ports. Curl port
didn't set this.

Test: http/tests/cache/disk-cache/disk-cache-302-status-code.html

* platform/network/curl/ResourceResponseCurl.cpp:
(WebCore::ResourceResponse::ResourceResponse):

LayoutTests:

* platform/wincairo/TestExpectations:
  - http/tests/cache/disk-cache/disk-cache-302-status-code.html: Pass


Canonical link: https://commits.webkit.org/203234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234311 268f45cc-cd09-0410-ab3c-d52691b4dbfc